# poet-it

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  NOTICE  README.md  about.txt  pyproject.toml  run_tests.sh
.github/: FUNDING.yml
flatpak/: generate-pip-sources.sh  io.github.commuted.poet_it.desktop  io.github.commuted.poet_it.metainfo.xml  io.github.commuted.poet_it.yml  io.github.commuted.poetit.desktop  io.github.commuted.poetit.metainfo.xml  io.github.commuted.poetit.yml  python3-requirements.json  python3-torch-cpu.json  requirements.txt
packaging/aur/: PKGBUILD
packaging/aur/python-ufal-udpipe/: .SRCINFO  .nvchecker.toml  PKGBUILD  README.md  update.sh
packaging/flatpak/: io.github.commuted.Poetit.desktop  io.github.commuted.Poetit.metainfo.xml  io.github.commuted.Poetit.yml
packaging/windows/: build.bat  poet-it.spec  poetit.spec
poedit/: app.py
poet_it/: __main__.py  app.py  linguistics.py  popups.py
poet_it/data/: about.txt  guide.txt  help.txt  poet-it.desktop
poetit/: app.py  file_io.py  linguistics.py  popups.py
poetit/data/: about.txt  poetit.desktop
scripts/: trim_nlp_footprint.py  xim_ibus_bench.py
snap/: snapcraft.yaml
snap/gui/: poet-it.desktop  poetit.desktop
snap/local/: launch
tests/: test_app.py  test_file_io.py  test_linguistics.py  test_rhyme_lookup.py  test_stanza_smoke.py  test_udpipe_diagram.py  test_vcs.py
