[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetit"
version = "0.1.0"
description = "Desktop poetry editor with meter analysis, rhyme lookup, thesaurus, and version control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ron Hinchley", email = "commuted@gmail.com" },
]
keywords = ["poetry", "editor", "meter", "rhyme", "linguistics", "tkinter", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
# CMUDict and WordNet are bundled — no separate NLTK data download needed.
# Stanza downloads its English model automatically on first use.
dependencies = [
    "nltk>=3.8",
    "prosodic>=3.0",
    "stanza>=1.7",
    "dulwich>=0.22",
    "resvg_py>=0.3",
    "Pillow>=9.0",
    "pyspellchecker>=0.7",
]

[project.urls]
Homepage      = "https://github.com/commuted/poetit"
Repository    = "https://github.com/commuted/poetit"
"Bug Tracker" = "https://github.com/commuted/poetit/issues"

[project.optional-dependencies]
dev = ["build", "twine", "pytest>=8.0"]

[project.scripts]
poetit = "poetit.app:main"
poetit-install-desktop = "poetit.app:setup_linux_desktop"

[project.gui-scripts]
poetit-gui = "poetit.app:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["poetit", "poetit.*"]

[tool.setuptools.package-data]
"poetit" = [
    "data/*.json",
    "data/*.dict",
    "data/*.png",
    "data/*.desktop",
    "data/*.txt",
    "data/corpora/*.zip",
]

[tool.ruff.lint]
# E701 (multiple statements on one line): the column-aligned if/elif/else
# one-liners in linguistics.py and popups.py are intentional for readability.
ignore = ["E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
