[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poet-it"
version = "0.1.0"
description = "Desktop poetry editor with meter analysis, rhyme lookup, thesaurus, and version control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ron Hinchley", email = "commuted@gmail.com" },
]
keywords = ["poetry", "editor", "meter", "rhyme", "linguistics", "tkinter", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
# CMUDict and WordNet are bundled — no separate NLTK data download needed.
# Stanza downloads its English model automatically on first use.
dependencies = [
    "nltk>=3.8",
    # Pinned: prosodic 3.10 renamed the parse-slot API (slot.syll -> slot.unit)
    # and changed WordToken whitespace, which breaks meter rendering (blank
    # output). 3.8.0 is the last version whose slot/wordtoken API our
    # scansion renderer (linguistics._compose_meter_line_prosodic) targets.
    "prosodic==3.8.0",
    "ufal.udpipe>=1.3",
    "dulwich>=0.22",
    "resvg_py>=0.3",
    "Pillow>=9.0",
    "pyspellchecker>=0.7",
]

[project.urls]
Homepage      = "https://github.com/commuted/poet-it"
Repository    = "https://github.com/commuted/poet-it"
"Bug Tracker" = "https://github.com/commuted/poet-it/issues"

[project.optional-dependencies]
# "Quality mode": a more accurate dependency diagram via Stanza's biaffine
# parser. Opt-in because Stanza pulls PyTorch (~1.7 GB) and downloads its EWT
# model (~500 MB) on first use. Without it, poet-it uses the bundled UDPipe model.
quality = ["stanza>=1.7"]
dev = ["build", "twine", "pytest>=8.0"]

[project.scripts]
poet-it = "poet_it.app:main"
poet-it-install-desktop = "poet_it.app:setup_linux_desktop"

[project.gui-scripts]
poet-it-gui = "poet_it.app:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["poet_it", "poet_it.*"]

[tool.setuptools.package-data]
"poet_it" = [
    "data/*.json",
    "data/*.dict",
    "data/*.png",
    "data/*.jpg",
    "data/*.desktop",
    "data/*.txt",
    "data/*.udpipe",
    "data/corpora/*.zip",
]

[tool.ruff.lint]
# E701 (multiple statements on one line): the column-aligned if/elif/else
# one-liners in linguistics.py and popups.py are intentional for readability.
ignore = ["E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
